--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "license": "0BSD",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -8,18 +7,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.46",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "@expo/vector-icons": "^14.0.2",
-    "react-native-paper": "4.9.2",
-    "react-native-screens": "~4.4.0",
-    "@react-navigation/native": "*",
-    "@react-navigation/elements": "*",
-    "@react-navigation/native-stack": "*",
-    "react-native-safe-area-context": "4.12.0",
-    "@react-native-masked-view/masked-view": "0.3.2"
+    "expo": "~50.0.17",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-maps": "1.10.0",
+    "@expo/vector-icons": "^14.0.0",
+    "react-native-screens": "~3.29.0",
+    "@react-navigation/stack": "~6.3.29",
+    "@react-navigation/native": "~6.1.17",
+    "react-native-gesture-handler": "~2.14.0",
+    "@react-navigation/bottom-tabs": "~6.5.20",
+    "react-native-safe-area-context": "4.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
